# trx

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
include/flux/: flux.hpp
include/trx/: trx.hpp
test/: CMakeLists.txt  flux.test.cpp  reducers.test.cpp  samples.test.cpp  transducers.test.cpp
tests/: CMakeLists.txt  reducers.test.cpp  samples.test.cpp  transducers.test.cpp
